--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <HEAD>
-<LINK REL="stylesheet" ref="UC.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<LINK REL="stylesheet" href="UC.css">
 <TITLE>UNDER CONSTRUCTION</TITLE>
 </HEAD>
 <BODY>
